--- a/index.html
+++ b/index.html
@@ -92,9 +92,9 @@ To ease the pain, I usually provide an IDE setup with the rule set, so most of t
 <li>Locate the settings of the plugin
 <img src="images/howto/02-locate_settings.PNG"/>
 </li>
-<li>Add <a target="_blank" href="https://github.com/meza/checkstyleRuleset/blob/master/src/main/resources/checkstyle.xml">the checkstyle.xml</a> as a HTTP ruleset
+<li>Add <a target="_blank" href="http://github.com/meza/checkstyleRuleset/raw/master/src/main/resources/checkstyle.xml">the checkstyle.xml</a> as a HTTP ruleset
 <img src="images/howto/03-set_ruleset.PNG"/></li>
-<li>Download the IntelliJ IDEA formatting file from: <a href="https://raw.github.com/meza/checkstyleRuleset/master/src/main/resources/ides/intellij/config/codestyles/meza.xml" target="_blank">here</a>, and place it under &lt;user_home&gt;/.IntellijIdea&lt;version&gt;/config/codestyles</li>
+<li>Download the IntelliJ IDEA formatting file from: <a href="http://raw.github.com/meza/checkstyleRuleset/master/src/main/resources/ides/intellij/config/codestyles/meza.xml" target="_blank">here</a>, and place it under &lt;user_home&gt;/.IntellijIdea&lt;version&gt;/config/codestyles</li>
 <li>Restart IntelliJ</li>
 <li>Set the newly downloaded formatter to be active for your project
 <img src="images/howto/04-set_formatter.PNG"/></li>
