--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@ To ease the pain, I usually provide an IDE setup with the rule set, so most of t
 <li>Set the newly downloaded formatter to be active for your project
 <img src="images/howto/04-set_formatter.PNG"/></li>
 </li>
+<li>Select the editor pane
+<img src="images/howto/05-select_editor.png"/></li>
+<li>Set ensure line feed
+<img src="images/howto/06-set_blank_lines.png"/></li>
 </ol>
       </section>
     </div>
